--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
+    "vue-material-design-icons": "^3.3.1",
     "vue-router": "^3.0.3",
     "vue-select": "^3.1.0"
   },
