--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
-    "connect-mongo": "^3.0.0",
     "cookie-parser": "~1.4.3",
+    "cookie-session": "^1.3.3",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.0",
-    "express-session": "^1.16.1",
     "http-errors": "~1.6.2",
     "mongoose": "^5.5.11",
     "morgan": "~1.9.0",
