--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "mongoose": "^5.5.11",
+    "mongoose-paginate": "^5.0.3",
     "morgan": "~1.9.0",
     "multer": "^1.4.1",
     "node-sass-middleware": "^0.11.0",
