--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "nodemailer": "^6.2.1",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^2.0.0",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "vue-mathjax": "0.0.11"
   },
   "devDependencies": {
     "chai": "^4.2.0",
