--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-.DS_Store
 node_modules
+.DS_Store
 /dist
 
 # local env files
@@ -28,3 +28,5 @@ coverage
 
 public/stylesheets/*.css
 public/stylesheets/*.css.map
+
+tags
