--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "nodemailer": "^6.2.1",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^2.0.0",
-    "pug": "2.0.0-beta11",
+    "pug": "^2.0.4",
     "vue-mathjax": "0.0.11"
   },
   "devDependencies": {
-    "jest": "^25.2.6",
-    "supertest": "^4.0.2"
+    "@shelf/jest-mongodb": "^1.1.5",
+    "jest": "^25.2.6"
   }
 }
