--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -10,6 +10,9 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "tippy.js": "^6.2.3",
+    "tiptap": "^1.27.1",
+    "tiptap-extensions": "^1.29.1",
     "vue": "^2.6.10",
     "vue-material-design-icons": "^3.3.1",
     "vue-router": "^3.0.3",
