--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "highlight.js": "^10.0.3",
     "tippy.js": "^6.2.3",
     "tiptap": "^1.27.1",
     "tiptap-extensions": "^1.29.1",
