--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "watch": "nodemon ./bin/www",
+    "watch": "npx nodemon ./bin/www",
     "test": "jest -i",
     "coverage": "jest -i --coverage"
   },
@@ -27,11 +27,11 @@
     "nodemailer": "^6.2.1",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^2.0.0",
-    "pug": "^2.0.4",
-    "vue-mathjax": "0.0.11"
+    "pug": "^2.0.4"
   },
   "devDependencies": {
     "@shelf/jest-mongodb": "^1.1.5",
-    "jest": "^25.2.6"
+    "jest": "^25.2.6",
+    "nodemon": "^2.0.4"
   }
 }
