--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "scripts": {
     "start": "node ./bin/www",
     "watch": "npx nodemon ./bin/www",
-    "test": "jest -i",
-    "coverage": "jest -i --coverage"
+    "test": "jest",
+    "coverage": "jest --coverage"
   },
   "jest": {
-    "testEnvironment": "node"
+    "testEnvironment": "./test/environment"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -30,8 +30,8 @@
     "pug": "^2.0.4"
   },
   "devDependencies": {
-    "@shelf/jest-mongodb": "^1.1.5",
     "jest": "^25.2.6",
+    "mongodb-memory-server": "^6.6.1",
     "nodemon": "^2.0.4"
   }
 }
