--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"eslint-plugin-react-hooks": "^2.5.0",
 		"eslint-plugin-vue": "^6.2.2",
 		"jest": "^25.2.6",
+		"jest-environment-node": "^26.0.1",
 		"mongodb-memory-server": "^6.6.1",
 		"nodemon": "^2.0.4",
 		"prettier": "^2.0.5"
