--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -1,56 +1,70 @@
 {
-  "name": "admin",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
-  },
-  "dependencies": {
-    "axios": "^0.19.0",
-    "core-js": "^2.6.5",
-    "highlight.js": "^10.0.3",
-    "tiptap": "^1.27.1",
-    "tiptap-extensions": "^1.29.1",
-    "vue": "^2.6.10",
-    "vue-material-design-icons": "^3.3.1",
-    "vue-router": "^3.0.3",
-    "vue-select": "^3.1.0"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.3",
-    "@vue/cli-plugin-eslint": "^3.0.3",
-    "@vue/cli-service": "^3.0.3",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "node-sass": "^4.12.0",
-    "sass-loader": "^7.1.0",
-    "vue-cli-plugin-pug": "^1.0.7",
-    "vue-template-compiler": "^2.6.10"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "rules": {},
-    "parserOptions": {
-      "parser": "babel-eslint"
-    }
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions"
-  ]
+	"name": "admin",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"serve": "vue-cli-service serve",
+		"build": "vue-cli-service build",
+		"lint": "vue-cli-service lint"
+	},
+	"dependencies": {
+		"axios": "^0.19.0",
+		"core-js": "^2.6.5",
+		"highlight.js": "^10.0.3",
+		"tiptap": "^1.27.1",
+		"tiptap-extensions": "^1.29.1",
+		"vue": "^2.6.10",
+		"vue-material-design-icons": "^3.3.1",
+		"vue-router": "^3.0.3",
+		"vue-select": "^3.1.0"
+	},
+	"devDependencies": {
+		"@vue/cli-plugin-babel": "^3.0.3",
+		"@vue/cli-plugin-eslint": "^3.0.3",
+		"@vue/cli-service": "^3.0.3",
+		"babel-eslint": "^10.0.1",
+		"eslint": "^5.16.0",
+		"eslint-config-prettier": "^6.11.0",
+		"eslint-plugin-prettier": "^3.1.3",
+		"eslint-plugin-vue": "^5.0.0",
+		"node-sass": "^4.14.1",
+		"prettier": "^2.0.5",
+		"sass-loader": "^7.1.0",
+		"vue-cli-plugin-pug": "^1.0.7",
+		"vue-template-compiler": "^2.6.10"
+	},
+	"eslintConfig": {
+		"root": true,
+		"env": {
+			"node": true
+		},
+		"extends": [
+			"plugin:vue/essential",
+			"eslint:recommended",
+			"prettier"
+		],
+		"plugins": [
+			"vue",
+			"prettier"
+		],
+		"rules": {
+			"prettier/prettier": "error",
+			"camelcase": "off",
+			"no-underscore-dangle": "off",
+			"no-plusplus": "off",
+			"func-names": "off"
+		},
+		"parserOptions": {
+			"parser": "babel-eslint"
+		}
+	},
+	"postcss": {
+		"plugins": {
+			"autoprefixer": {}
+		}
+	},
+	"browserslist": [
+		"> 1%",
+		"last 2 versions"
+	]
 }
