--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "jest": "^25.2.6",
+    "jest-environment-node": "^26.0.1",
     "mongodb-memory-server": "^6.6.1",
     "nodemon": "^2.0.4"
   }
