--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"eslint-plugin-import": "^2.21.2",
 		"eslint-plugin-prettier": "^3.1.3",
 		"jest": "^25.2.6",
+		"jest-environment-node": "^26.0.1",
 		"mongodb-memory-server": "^6.6.1",
 		"nodemon": "^2.0.4",
 		"prettier": "^2.0.5"
