--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -16,7 +16,8 @@
 		"vue": "^2.6.11",
 		"vue-material-design-icons": "^3.4.0",
 		"vue-router": "^3.3.4",
-		"vue-select": "^3.10.3"
+		"vue-select": "^3.10.3",
+		"vue-sweetalert2": "^3.0.5"
 	},
 	"devDependencies": {
 		"@vue/cli-plugin-babel": "^3.12.1",
