--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -22,7 +22,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: |
           cd dashboard
-          npm install
+          npm ci
           npm run build --if-present
           cd ..
         
@@ -40,7 +40,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: |
-          npm install
+          npm ci
           npm test -- --ci
   lint:
     name: Tests the linting
@@ -56,10 +56,10 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: |
-          npm install
+          npm ci
           npm run lint
           cd dashboard
-          npm install
-          npm run lint
+          npm ci
+          npm run lint -- --no-fix
           cd ..
         
