--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
 	},
 	"dependencies": {
 		"bcrypt": "^5.0.0",
+		"aws-sdk": "^2.709.0",
 		"body-parser": "^1.19.0",
 		"cookie-parser": "~1.4.3",
 		"cookie-session": "^1.3.3",
