--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
 		"axios": "^0.19.2",
 		"core-js": "^2.6.11",
 		"highlight.js": "^10.1.0",
+		"query-string": "^6.13.1",
 		"tiptap": "^1.27.1",
 		"tiptap-extensions": "^1.29.1",
 		"vue": "^2.6.11",
