--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
 		}
 	},
 	"dependencies": {
+		"bcrypt": "^5.0.0",
 		"body-parser": "^1.19.0",
 		"cookie-parser": "~1.4.3",
 		"cookie-session": "^1.3.3",
@@ -23,6 +24,7 @@
 		"dotenv": "^8.2.0",
 		"express": "~4.16.0",
 		"http-errors": "~1.6.2",
+		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.5.11",
 		"mongoose-paginate": "^5.0.3",
 		"morgan": "~1.9.0",
@@ -40,6 +42,7 @@
 		"jest": "^25.2.6",
 		"jest-environment-node": "^26.0.1",
 		"mongodb-memory-server": "^6.6.1",
+		"nodemon": "^2.0.4",
 		"prettier": "^2.0.5"
 	}
 }
