--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
 		"vue-material-design-icons": "^3.4.0",
 		"vue-router": "^3.3.4",
 		"vue-select": "^3.10.3",
-		"vue-sweetalert2": "^3.0.5"
+		"vue-sweetalert2": "^3.0.5",
+		"vuex": "^3.5.1"
 	},
 	"devDependencies": {
 		"@vue/cli-plugin-babel": "^3.12.1",
