--- a/server/package.json
+++ b/server/package.json
@@ -27,11 +27,8 @@
 		"mongoose-paginate": "^5.0.3",
 		"morgan": "~1.9.0",
 		"multer": "^1.4.1",
-		"node-sass-middleware": "^0.11.0",
-		"nodemailer": "^6.2.1",
 		"passport": "^0.4.0",
-		"passport-google-oauth20": "^2.0.0",
-		"pug": "^2.0.4"
+		"passport-google-oauth20": "^2.0.0"
 	},
 	"devDependencies": {
 		"eslint": "^7.2.0",
