--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
 		"vue-router": "^3.3.4",
 		"vue-select": "^3.10.3",
 		"vue-sweetalert2": "^3.0.5",
+		"vuedraggable": "^2.24.0",
 		"vuex": "^3.5.1"
 	},
 	"devDependencies": {
