--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
 		"tiptap": "^1.27.1",
 		"tiptap-extensions": "^1.29.1",
 		"vue": "^2.6.11",
+		"vue-context": "^6.0.0",
 		"vue-material-design-icons": "^3.4.0",
 		"vue-router": "^3.3.4",
 		"vue-select": "^3.10.3",
