--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -39,7 +39,8 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - run: cd server
+      - run: echo `pwd`
+      - run: cd server && echo `pwd`
       - run: echo `pwd`
       - run: npm ci
       - run: npm test -- --ci
