--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -40,7 +40,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: echo `pwd`
-      - run: cd server && echo `pwd`
+      - run: cd server && echo `pwd` && npm ci
       - run: echo `pwd`
       - run: npm ci
       - run: npm test -- --ci
