--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -14,6 +14,7 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         node-version: [12.x]
+        mongodb-version: [4.2]
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
@@ -40,6 +41,10 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: echo `pwd`
+      - name: Start MongoDB
+        uses: supercharge/mongodb-github-action@1.3.0
+        with:
+          mongodb-version: ${{ matrix.mongodb-version }}
 #       - run: cd server && echo `pwd` && npm ci
       - run: cd server && echo `pwd` && npm ci && npm test -- --ci --verbose --forceExit --detectOpenHandles --runInBand
         env:
