--- a/server/package.json
+++ b/server/package.json
@@ -42,6 +42,7 @@
 		"eslint-plugin-prettier": "^3.1.3",
 		"jest": "^25.2.6",
 		"jest-environment-node": "^26.0.1",
+    "mongodb-memory-server": "^6.6.1",
 		"nodemon": "^2.0.4",
 		"prettier": "^2.0.5"
 	}
