--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -9,10 +9,10 @@ on:
 jobs:
   build:
     name: Vue app builds successfully
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        os: [ubuntu-18.04]
         node-version: [12.x]
         mongodb-version: [4.2]
     steps:
@@ -29,10 +29,10 @@ jobs:
         
   test:
     name: Tests server
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        os: [ubuntu-18.04]
         node-version: [12.x]
     steps:
       - uses: actions/checkout@v2
@@ -52,10 +52,10 @@ jobs:
       
   lint:
     name: Tests the linting
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        os: [ubuntu-18.04]
         node-version: [12.x]
     steps:
       - uses: actions/checkout@v2
