Ensure correct node version

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,7 @@ jobs:
      
           script: |
             echo 'Deployment Started'
+            nvm use 12
             echo `node -v`
             cd noodle
             git pull
